devtools/client/themes/layout.css
#
sidebar
-
panel
-
layoutview
{
display
:
block
;
overflow
:
auto
;
}
#
layout
-
container
{
max
-
width
:
400px
;
margin
:
0px
auto
;
padding
:
0
;
position
:
relative
;
}
#
layout
-
header
{
box
-
sizing
:
border
-
box
;
width
:
100
%
;
padding
:
4px
14px
;
display
:
-
moz
-
box
;
vertical
-
align
:
top
;
}
#
layout
-
header
:
dir
(
rtl
)
{
-
moz
-
box
-
direction
:
reverse
;
}
#
layout
-
header
>
span
{
display
:
-
moz
-
box
;
}
#
layout
-
element
-
size
{
-
moz
-
box
-
flex
:
1
;
}
#
layout
-
element
-
size
:
dir
(
rtl
)
{
-
moz
-
box
-
pack
:
end
;
}
media
(
max
-
height
:
250px
)
{
#
layout
-
header
{
padding
-
top
:
0
;
padding
-
bottom
:
0
;
margin
-
top
:
10px
;
margin
-
bottom
:
8px
;
}
}
#
layout
-
main
{
position
:
absolute
;
box
-
sizing
:
border
-
box
;
background
-
color
:
white
;
color
:
var
(
-
-
theme
-
selection
-
color
)
;
margin
:
0
14px
10px
14px
;
width
:
calc
(
100
%
-
2
*
14px
)
;
}
.
layout
-
margin
.
layout
-
size
{
color
:
var
(
-
-
theme
-
highlight
-
blue
)
;
}
#
layout
-
content
{
height
:
25px
;
}
#
layout
-
margins
#
layout
-
borders
#
layout
-
padding
{
border
-
color
:
hsla
(
210
100
%
85
%
0
.
2
)
;
border
-
width
:
25px
;
border
-
style
:
solid
;
outline
:
dotted
1px
hsl
(
210
100
%
85
%
)
;
}
#
layout
-
margins
{
opacity
:
.
8
;
}
media
(
max
-
height
:
250px
)
{
#
layout
-
content
{
height
:
18px
;
}
#
layout
-
margins
#
layout
-
borders
#
layout
-
padding
{
border
-
width
:
18px
;
}
}
#
layout
-
margins
{
border
-
color
:
#
edff64
;
}
#
layout
-
borders
{
border
-
color
:
#
444444
;
}
#
layout
-
padding
{
border
-
color
:
#
6a5acd
;
}
#
layout
-
content
{
background
-
color
:
#
87ceeb
;
}
.
theme
-
firebug
#
layout
-
main
.
theme
-
firebug
#
layout
-
borders
.
theme
-
firebug
#
layout
-
content
{
border
-
style
:
solid
;
}
.
theme
-
firebug
#
layout
-
main
.
theme
-
firebug
#
layout
-
header
{
font
-
family
:
var
(
-
-
proportional
-
font
-
family
)
;
}
.
theme
-
firebug
#
layout
-
main
{
color
:
var
(
-
-
theme
-
body
-
color
)
;
font
-
size
:
var
(
-
-
theme
-
toolbar
-
font
-
size
)
;
}
.
theme
-
firebug
#
layout
-
header
{
font
-
size
:
var
(
-
-
theme
-
toolbar
-
font
-
size
)
;
}
#
layout
-
main
>
p
{
position
:
absolute
;
pointer
-
events
:
none
;
margin
:
0
;
text
-
align
:
center
;
}
#
layout
-
main
>
p
>
span
#
layout
-
main
>
p
>
input
{
vertical
-
align
:
middle
;
pointer
-
events
:
auto
;
}
.
layout
-
top
.
layout
-
bottom
{
width
:
calc
(
100
%
-
2px
)
;
text
-
align
:
center
;
}
.
layout
-
padding
.
layout
-
top
{
top
:
55px
;
}
.
layout
-
padding
.
layout
-
bottom
{
bottom
:
57px
;
}
.
layout
-
border
.
layout
-
top
{
top
:
30px
;
}
.
layout
-
border
.
layout
-
bottom
{
bottom
:
31px
;
}
.
layout
-
margin
.
layout
-
top
{
top
:
5px
;
}
.
layout
-
margin
.
layout
-
bottom
{
bottom
:
6px
;
}
.
layout
-
size
.
layout
-
margin
.
layout
-
left
.
layout
-
margin
.
layout
-
right
.
layout
-
border
.
layout
-
left
.
layout
-
border
.
layout
-
right
.
layout
-
padding
.
layout
-
left
.
layout
-
padding
.
layout
-
right
{
top
:
22px
;
line
-
height
:
132px
;
}
.
layout
-
size
{
width
:
calc
(
100
%
-
2px
)
;
}
.
layout
-
margin
.
layout
-
right
.
layout
-
margin
.
layout
-
left
.
layout
-
border
.
layout
-
left
.
layout
-
border
.
layout
-
right
.
layout
-
padding
.
layout
-
right
.
layout
-
padding
.
layout
-
left
{
width
:
25px
;
}
.
layout
-
padding
.
layout
-
left
{
left
:
52px
;
}
.
layout
-
padding
.
layout
-
right
{
right
:
51px
;
}
.
layout
-
border
.
layout
-
left
{
left
:
26px
;
}
.
layout
-
border
.
layout
-
right
{
right
:
26px
;
}
.
layout
-
margin
.
layout
-
right
{
right
:
0
;
}
.
layout
-
margin
.
layout
-
left
{
left
:
0
;
}
.
layout
-
rotate
.
layout
-
left
:
not
(
.
layout
-
editing
)
{
transform
:
rotate
(
-
90deg
)
;
}
.
layout
-
rotate
.
layout
-
right
:
not
(
.
layout
-
editing
)
{
transform
:
rotate
(
90deg
)
;
}
media
(
max
-
height
:
250px
)
{
.
layout
-
padding
.
layout
-
top
{
top
:
37px
;
}
.
layout
-
padding
.
layout
-
bottom
{
bottom
:
38px
;
}
.
layout
-
border
.
layout
-
top
{
top
:
19px
;
}
.
layout
-
border
.
layout
-
bottom
{
bottom
:
20px
;
}
.
layout
-
margin
.
layout
-
top
{
top
:
1px
;
}
.
layout
-
margin
.
layout
-
bottom
{
bottom
:
2px
;
}
.
layout
-
size
.
layout
-
margin
.
layout
-
left
.
layout
-
margin
.
layout
-
right
.
layout
-
border
.
layout
-
left
.
layout
-
border
.
layout
-
right
.
layout
-
padding
.
layout
-
left
.
layout
-
padding
.
layout
-
right
{
line
-
height
:
80px
;
}
.
layout
-
margin
.
layout
-
right
.
layout
-
margin
.
layout
-
left
.
layout
-
border
.
layout
-
left
.
layout
-
border
.
layout
-
right
.
layout
-
padding
.
layout
-
right
.
layout
-
padding
.
layout
-
left
{
width
:
21px
;
}
.
layout
-
padding
.
layout
-
left
{
left
:
35px
;
}
.
layout
-
padding
.
layout
-
right
{
right
:
35px
;
}
.
layout
-
border
.
layout
-
left
{
left
:
16px
;
}
.
layout
-
border
.
layout
-
right
{
right
:
17px
;
}
}
.
layout
-
legend
{
position
:
absolute
;
margin
:
5px
6px
;
z
-
index
:
1
;
}
.
layout
-
legend
[
data
-
box
=
"
margin
"
]
{
color
:
var
(
-
-
theme
-
highlight
-
blue
)
;
}
media
(
max
-
height
:
250px
)
{
.
layout
-
legend
{
margin
:
2px
6px
;
}
}
.
layout
-
editable
{
border
:
1px
dashed
transparent
;
-
moz
-
user
-
select
:
text
;
}
.
layout
-
editable
:
hover
{
border
-
bottom
-
color
:
hsl
(
0
0
%
50
%
)
;
}
.
styleinspector
-
propertyeditor
{
border
:
1px
solid
#
ccc
;
padding
:
0
;
}
.
layout
-
size
>
span
{
cursor
:
default
;
}
#
layout
-
container
.
inactive
>
#
layout
-
header
>
#
layout
-
element
-
position
#
layout
-
container
.
inactive
>
#
layout
-
header
>
#
layout
-
element
-
size
#
layout
-
container
.
inactive
>
#
layout
-
main
>
p
{
visibility
:
hidden
;
}
#
layout
-
position
-
group
{
display
:
flex
;
align
-
items
:
center
;
}
#
layout
-
geometry
-
editor
{
visibility
:
hidden
;
}
#
layout
-
geometry
-
editor
:
:
before
{
background
:
url
(
images
/
geometry
-
editor
.
svg
)
no
-
repeat
center
center
/
16px
16px
;
}

